2004-11-25  Paolo Borelli  <pborelli@katamail.com>

	* dialogs/gedit-preferences-dialog.c: do not leak tooltips.

2004-11-21  Paolo Borelli  <pborelli@katamail.com>

	dialogs/gedit-encodings-dialog.glade2: remove separator.
	dialogs/gedit-encodings-dialog.c: use g_slist_find instead of
	reimplementing it.

2004-11-21  Paolo Borelli  <pborelli@katamail.com>

	dialogs/gedit-plugin-manager.c: use gtk_tree_model_get_iter_first
	instead of the deprecated gtk_tree_model_get_iter_root.

2004-11-18  Paolo Borelli  <pborelli@katamail.com>

	* GNOME_Gedit.idl:
	* gedit-document-server.c:
	* gedit-document.[ch]: remove more unused functions.

2004-11-18  Paolo Borelli  <pborelli@katamail.com>

	* dialogs/gedit-dialog-replace.c: use gtk api to handle selection.
	* gedit-document.[ch]: remove unused functions.

2004-11-18  Paolo Borelli  <pborelli@katamail.com>

	* GNOME_Gedit.idl:
	* gedit-document-server.c: remove unused methods from the doc server.

2004-11-17  Paolo Borelli  <pborelli@katamail.com>

	* plugins-engine.c: use gkeyfile instead of deprecated
	gnome-icon-theme to parse plugin files.

2004-11-17  Paolo Borelli  <pborelli@katamail.com>

	* dialogs/gedit-dialog-goto-line: include stdlib to fix atoi warning.

2004-11-15  Paolo Borelli  <pborelli@katamail.com>

	* dialogs/gedit-close-confirmation-dialog.c: free selected_documents 
	list in finalize.

2004-11-15  Paolo Maggi  <paolo@gnome.org>

	* gedit-commands.c (gedit_cmd_help_about): updates my email address

	* gedit-file.c (show_loading_dialog): sets skip-taskbar and skip-pager 
	hints for the "loading" window

	* gedit-print.c (show_printing_dialog): sets skip-taskbar and skip-pager 
	hints for the "printing" window

	* gedit2.c (main): unrefs program before exiting

2004-11-15  Paolo Borelli  <pborelli@katamail.com>

	* dialogs/gedit-plugin-manager.c: readd plugins info in the about.

2004-11-13  Paolo Borelli  <pborelli@katamail.com>

	* dialogs/*.c:
	* *.c: use gi18n.h instead of gnome-i18n.h.
