@@ -1,3 +1,7 @@
+2004-11-28  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit-languages-manager.c: mark a global var as static.
+
 2004-11-25  Paolo Borelli  <pborelli@katamail.com>
 
 	* dialogs/gedit-preferences-dialog.c: do not leak tooltips.
